Source updates for Java 10 compatibility